# SuperCalculator

./: .gitignore  CNAME  README.md  README_CN.md  SuperCalculator.spec  calc_bridge.py  calc_core.c  finance_calc.py  index.html  locale_strings.py  probability_calc.py  pyrightconfig.json  requirements-dev.txt  requirements.txt  stat_dist.py  super_calc_bridged.py
.github/workflows/: build-all-platforms.yml  build-android-apk.yml  build-linux.yml  build-windows-exe.yml  main.yml  opencode-scheduled-2.yml  opencode-scheduled.yml  opencode.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  calc_core_jni.c
android/app/src/main/java/com/supercalc/: CalcActivity.java  CalcEngine.java  FullScreenPlot3DActivity.java  (+5 more)
android/app/src/main/res/drawable/: bg_liquid_glass_amber.xml  bg_liquid_glass_card.xml  bg_liquid_glass_cyan.xml  bg_liquid_glass_green.xml  bg_liquid_glass_indigo.xml  bg_liquid_glass_input.xml  bg_liquid_glass_neutral.xml  bg_liquid_glass_pink.xml  bg_liquid_glass_primary.xml  ic_launcher_foreground.xml  spectral_line.xml
android/app/src/main/res/layout/: activity_calc.xml  activity_full_screen_plot.xml  activity_full_screen_plot_3d.xml  activity_plot.xml  activity_plot_3d.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  font_certs.xml  strings.xml  themes.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
docs/: usage_cn.md  usage_en.md
